--- a/donera.html
+++ b/donera.html
@@ -28,7 +28,7 @@
             <p style="font-size: 1.5em; font-weight: bold; text-align: center; color: #145d44;">
                 📞 072-262 09 26
             </p>
-            <p style="text-align: center;">Ring eller skicka SMS till vårt donationsnummer för att bidra.</p>
+            <p style="text-align: center;">Swisha till vårt donationsnummer för att bidra.</p>
 
             <!-- Donera-knapp -->
             <div style="text-align: center;">
@@ -45,3 +45,4 @@
 
 </body>
 </html>
+
