--- a/donera.html
+++ b/donera.html
@@ -28,14 +28,13 @@
             <p style="font-size: 1.5em; font-weight: bold; text-align: center; color: #145d44;">
                 📞 072-262 09 26
             </p>
-            <p style="text-align: center;">Swisha till vårt donationsnummer för att bidra.</p>
+            <p style="text-align: center;">Ring eller skicka SMS till vårt donationsnummer för att bidra.</p>
 
-            <!-- Donera-knapp -->
-            <div style="text-align: center;">
+            <div style="text-align: center; margin-top: 20px;">
                 <a href="tel:0722620926" class="button">📲 Donera nu</a>
             </div>
 
-            <p style="text-align: center;">Tack för att du hjälper oss att sprida hopp och matglädje! 💛</p>
+            <p style="text-align: center; margin-top: 10px;">Tack för att du hjälper oss att sprida hopp och matglädje! 💛</p>
         </section>
     </div>
 
@@ -45,4 +44,6 @@
 
 </body>
 </html>
+
+
 
