--- a/donera.html
+++ b/donera.html
@@ -28,10 +28,10 @@
             <p style="font-size: 1.5em; font-weight: bold; text-align: center; color: #145d44;">
                 📞 072-262 09 26
             </p>
-            <p style="text-align: center;">Ring eller skicka SMS till vårt donationsnummer för att bidra.</p>
+            <p style="text-align: center;">Swisha till vårt donationsnummer för att bidra.</p>
 
             <div style="text-align: center; margin-top: 20px;">
-                <a href="tel:0722620926" class="button">📲 Donera nu</a>
+                <a href="tel:0722620926" class="button">📲 Support</a>
             </div>
 
             <p style="text-align: center; margin-top: 10px;">Tack för att du hjälper oss att sprida hopp och matglädje! 💛</p>
@@ -44,6 +44,7 @@
 
 </body>
 </html>
+
 
 
 
